--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,58 +13,219 @@
  *= require_tree .
  *= require_self
  */
-$black: #161616;
-$grey: #747474;
 
-html {
-	height: 100%;
+//
+// $black: #161616;
+// $grey: #747474;
+//
+// html {
+// 	height: 100%;
+// }
+//
+// body {
+// 	font-family: sans-serif;
+// 	background: $black;
+// 	color: $grey;
+// 	font-size: 12px;
+// 	height: 100%;
+// 	padding-right: 10px;
+// }
+//
+// header {
+// 	display: flex;
+// 	img {
+// 		z-index: 1;
+// 	}
+// 	div {
+// 		background: url(/assets/pokedex-header-nav.png);
+// 		width: 100%;
+// 		height: 46px;
+// 		margin-right: -10px;
+// 	}
+// }
+//
+// .toys {
+// 	display: block;
+// }
+//
+// .pokedex {
+// 	display: flex;
+// 	justify-content: space-between;
+// }
+//
+// .pokemon-detail {
+// 	float: left;
+// 	min-width: 66%;
+// }
+//
+// .pokedex ul {
+// 	float: left;
+// }
+//
+// .pokemon-index-item {
+// 	border: 1px solid gray;
+// }
+//
+// .pokemon-index-item img {
+// 	width: 50px;
+// 	height: auto;
+// }
+
+.pokedex{display:flex;
+	padding:20px 0 0 0;
+	height:100%;
 }
-
-body {
-	font-family: sans-serif;
-	background: $black;
-	color: $grey;
-	font-size: 12px;
-	height: 100%;
-	padding-right: 10px;
+.pokedex>ul{padding:20px 10px 0 0;
+	width:300px;
+	height:calc(100% - 10px);
+	overflow:scroll;
 }
-
-header {
-	display: flex;
-	img {
-		z-index: 1;
-	}
-	div {
-		background: url(/assets/pokedex-header-nav.png);
-		width: 100%;
-		height: 46px;
-		margin-right: -10px;
-	}
+.pokemon-index-item{padding:5px 10px;
+	border-bottom:1px solid #747474;
+	cursor:pointer;
 }
-
-.toys {
-	display: block;
+.pokemon-index-item:hover{-webkit-filter:brightness(210%);
 }
-
-.pokedex {
-	display: flex;
-	justify-content: space-between;
+.pokemon-index-item img{width:20px;
+	margin:0 10px;
+	vertical-align:middle;
 }
-
-.pokemon-detail {
-	float: left;
-	min-width: 66%;
+.pokemon-index-item:first-of-type{border-top:1px solid grey;
 }
-
-.pokedex ul {
-	float: left;
+.pokemon-detail{display:flex;
+	flex-direction:column;
+	align-items:center;
+	flex:1;
+	position:relative;
+	background:#d1ccb6;
+	border:40px solid #111;
+	border-radius:20px;
+	padding:25px;
+	outline:10px solid #d43316;
+	overflow:scroll;
 }
-
-.pokemon-index-item {
-	border: 1px solid gray;
+.pokemon-detail ul{text-align:center;
 }
-
-.pokemon-index-item img {
-	width: 50px;
-	height: auto;
+.pokemon-detail ul li{font-size:20px;
+	padding:10px 0;
+	color:#161616;
+}
+.pokemon-detail ul .error{font-size:12px;
+	color:#d43316;
+}
+.pokemon-form{display:flex;
+	flex-direction:column;
+	width:60%;
+}
+.pokemon-form input,.pokemon-form select,.pokemon-form button{margin:20px 0;
+	background:none;
+	border:0;
+	border-radius:0px;
+	-webkit-appearance:none;
+	padding:5px;
+	font-size:16px;
+	border-bottom:1px solid #161616;
+}
+.pokemon-form button{background:#d43316;
+	color:white;
+	font-weight:bold;
+	padding:10px 0;
+	border:none;
+	cursor:pointer;
+	margin:0;
+}
+.pokemon-form select{cursor:pointer;
+}
+.toys{margin-top:25px;
+}
+.toy-list{display:flex;
+	flex-wrap:wrap;
+}
+.toy-list li{margin:15px;
+}
+.toy-list li img{cursor:pointer;
+	transition:all 0.2s ease;
+}
+.toy-list li img:hover{box-shadow:1px 1px 5px black;
+	-webkit-filter:sepia(50%);
+}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;
+	padding:0;
+	border:0;
+	outline:0;
+	font-weight:inherit;
+	font-style:inherit;
+	font-size:100%;
+	font-family:inherit;
+	vertical-align:baseline;
+}
+:focus{outline:0;
+}
+body{line-height:1;
+	color:black;
+	background:white;
+}
+ol,ul{list-style:none;
+}
+table{border-collapse:separate;
+	border-spacing:0;
+}
+caption,th,td{text-align:left;
+	font-weight:normal;
+}
+blockquote:before,blockquote:after,q:before,q:after{content:"";
+}
+blockquote,q{quotes:"" "";
+}
+html{height:100%;
+}
+body{font-family:sans-serif;
+	background:#161616;
+	color:#747474;
+	font-size:12px;
+	height:100%;
+	padding-right:10px;
+}
+header{display:flex;
+}
+header img{z-index:1;
+}
+header div{background:url(/assets/pokedex-header-nav.png);
+	width:100%;
+	height:46px;
+	margin-right:-10px;
+}
+nav{position:absolute;
+	top:45px;
+	width:100%;
+}
+nav ul{display:flex;
+	border-bottom:1px solid grey;
+	padding-left:220px;
+}
+nav ul li a{color:#747474;
+	display:block;
+	padding:15px;
+	text-decoration:none;
+	text-transform:uppercase;
+	cursor:pointer;
+	z-index:1;
+	position:relative;
+}
+nav ul li a:hover{color:white;
+}
+#root{margin-top:-31px;
+	height:100%;
+}
+#root>img{position:fixed;
+	top:25%;
+	left:25%;
+}
+h2{font-size:32px;
+}
+h3{font-size:24px;
+	text-align:center;
+	color:#161616;
+}
+.spinner{background:url(pokemon_spinner.gif);
 }
