--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 <header>
   <img src="./assets/pokedex-header.png" alt="pokedex">
   <div></div>
+  <nav><ul><li><a href="/">Pokedex Index</a></li></ul></nav>
 </header>
 
 
